packages/lintrunner/lintrunner-0.12.5.tar.gz/lintrunner-0.12.5/tests/snapshots/integration_test__format_command_doesnt_use_nonformat_linter.snap
---
source: tests/integration_test.rs
expression: output_lines
---
- "STDOUT:"
- No linters ran.
- ""
- ""
- "STDERR:"
- "WARNING: No previous init data found. If this is the first time you're running lintrunner, you should run `lintrunner init`."

